# gromacs-pyapi

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt  example_pyapi.py
src/: CMakeLists.txt
src/include/: numpy_conv.h
src/sip/: definitions.sip  string.sip
src/sip/commandline/: Commandline.sip  cmdlineoptionsmodule.sip  cmdlineparser.sip
src/sip/options/: Options.sip  abstractoption.sip  basicoptions.sip  filenameoption.sip  ioptionsbehavior.sip  ioptionscontainer.sip  options.sip  pyoptionsholder.sip  selectionoption.sip
src/sip/selection/: Selection.sip  selection.sip
src/sip/topology/: Topology.sip  atoms.sip  pstringlistwrapper.sip  topology.sip
src/sip/trajectoryanalysis/: TrajectoryAnalysis.sip  analysisdata.sip  analysismodule.sip  analysissettings.sip  cmdlinerunner.sip  runnercommon.sip
stub_headers/gromacs/analysisdata/: paralleloptions.h
stub_headers/gromacs/trajectoryanalysis/: runnercommon.h
